--- a/index.html
+++ b/index.html
@@ -1,329 +1,341 @@
 <!DOCTYPE html>
-<html> 
+<html>
+
 <head>
-<title>ARKFUTURE</title>
-<link rel="icon" href="favicon.ico">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>ARKFUTURE</title>
+    <link rel="icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 
-<!-------------正文-------> 
+<!-------------正文------->
+
 <body>
-<h1 class="welcome">Welcome to ARKFUTURE</h1>
-<img class="logo" src="https://arkfuture.cn/ARKFUTURE/RES/sa.png">
+    <h1 class="welcome">Welcome to ARKFUTURE</h1>
+    <img class="logo" src="https://arkfuture.cn/ARKFUTURE/RES/sa.png">
 
-<br>
-
-<div class="zww" id="1">
-    <h1>欢迎</h1>
-    
-    <h2>公约</h2>
-    <p>    
-        您需阅读我们的公约以了解工作室
-        “这不是一堆法律术语,但它们是关于什么是允许的指导方针
-        如果你不理解所有的东西也没关系,但是大多数人会理解他们所说的要点”
-        [ARKFUTURE公约](<a href="https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf">https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf</a>)
-    </p>
     <br>
-    <h2>加入我们/联系我们</h2>
-    <p>    
-        [IRC](<a href="irc://irc.arkfuture.cn:6667/#arkfuture_studio">irc://irc.arkfuture.cn:6667/#arkfuture_studio</a>)
-        [Telegram](<a href="https://t.me/arkfuture_studio">https://t.me/arkfuture_studio</a>)
-        [Matrix](<a href="https://matrix.to/#/#arkfuture:matrix.org">https://matrix.to/#/#arkfuture:matrix.org</a>)
-        [Matrix](<a href="https://matrix.to/#/#arkfuture_studio:matrix.org">https://matrix.to/#/#arkfuture_studio:matrix.org</a>)
-        [订阅邮件列表](<a herf="mailto:ARKFUTURE@FOXMAIL.COM">mailto:ARKFUTURE@FOXMAIL.COM</a>)
-    </p>
+
+    <div class="zww" id="1">
+        <h1>欢迎</h1>
+
+        <h2>公约</h2>
+        <p>
+            您需阅读我们的公约以了解工作室
+            “这不是一堆法律术语,但它们是关于什么是允许的指导方针,
+            如果你不理解所有的东西也没关系,但是大多数人会理解他们所说的要点”
+            [ARKFUTURE公约](<a
+                href="https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf">https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf</a>)
+        </p>
+        <br>
+        <h2>加入我们/联系我们</h2>
+        <p>
+            [IRC](<a
+                href="irc://irc.arkfuture.cn:6667/#arkfuture_studio">irc://irc.arkfuture.cn:6667/#arkfuture_studio</a>)
+            [Telegram](<a href="https://t.me/arkfuture_studio">https://t.me/arkfuture_studio</a>)
+            [Matrix](<a href="https://matrix.to/#/#arkfuture:matrix.org">https://matrix.to/#/#arkfuture:matrix.org</a>)
+            [Matrix](<a
+                href="https://matrix.to/#/#arkfuture_studio:matrix.org">https://matrix.to/#/#arkfuture_studio:matrix.org</a>)
+            [订阅邮件列表](<a herf="mailto:ARKFUTURE@FOXMAIL.COM">mailto:ARKFUTURE@FOXMAIL.COM</a>)
+        </p>
+        <br>
+        <h2>快链[快速功能链接]</h2>
+        <p>
+            [快链](<a href="https://arkfuture.cn/ARKFUTURE/RES/fl.html">https://arkfuture.cn/ARKFUTURE/RES/fl.html</a>)
+        </p>
+    </div>
     <br>
-    <h2>快链[快速功能链接]</h2>
-    <p>
-        [快链](<a href="https://arkfuture.cn/ARKFUTURE/RES/fl.html">https://arkfuture.cn/ARKFUTURE/RES/fl.html</a>)
-    </p>
-</div>
-<br>
-<div class="zww" id="2">
-    <h1>服务及说明[代理/资源库/日历/IRC等服务]</h1>
+    <div class="zww" id="2">
+        <h1>服务及说明[代理/资源库/日历/IRC等服务]</h1>
 
-    <h2>WEB</h2>
-    <p>
-        使用域名时,无端口号
-        使用其他镜像站时,无80端口时使用1314端口
-    </p>
+        <h2>WEB</h2>
+        <p>
+            使用域名时,无端口号
+            使用其他镜像站时,无80端口时使用1314端口
+        </p>
 
-    <h2>代理|VPN</h2>
-    <p>
-        L2TP/IPSEC服务(VPN),端口:1701
-        socks服务(代理),端口:5554
-        http服务(代理),端口:5555
-    </p>
+        <h2>代理|VPN</h2>
+        <p>
+            L2TP/IPSEC服务(VPN),端口:1701
+            socks服务(代理),端口:5554
+            http服务(代理),端口:5555
+        </p>
 
-    <h2>资源库</h2>
-    <p>
-        获取我们的内部资源
-        [资源库列表(使用git提交)](<a href="https//arkfuture.cn/ARKFUTURE/RES/rel.csv">https//arkfuture.cn/ARKFUTURE/RES/rel.csv</a>)
-    </p>
+        <h2>资源库</h2>
+        <p>
+            获取我们的内部资源
+            [资源库列表(使用git提交)](<a
+                href="https//arkfuture.cn/ARKFUTURE/RES/rel.csv">https//arkfuture.cn/ARKFUTURE/RES/rel.csv</a>)
+        </p>
 
-    <h2>Caldav日历服务及日历</h2>
-    <p>
-        查看我们近期的计划,或者参与到计划中来
-        [日历文件(使用git提交)](<a href="https://arkfuture.cn/ARKFUTURE/RES/cal.ics">https://arkfuture.cn/ARKFUTURE/RES/cal.ics</a>)
-    </p>
+        <h2>Caldav日历服务及日历</h2>
+        <p>
+            查看我们近期的计划,或者参与到计划中来
+            [日历文件(使用git提交)](<a
+                href="https://arkfuture.cn/ARKFUTURE/RES/cal.ics">https://arkfuture.cn/ARKFUTURE/RES/cal.ics</a>)
+        </p>
 
-    <h2>ICECAST2/MPD(电台/音乐服务)</h2>
-    <p>
-        [电台连接](<a href="https://arkfuture.cn:1315/arkfuture.ogg">https://arkfuture.cn:1315/arkfuture.ogg</a>)
-    </p>
+        <h2>ICECAST2/MPD(电台/音乐服务)</h2>
+        <p>
+            [电台连接](<a href="https://arkfuture.cn:1315/arkfuture.ogg">https://arkfuture.cn:1315/arkfuture.ogg</a>)
+        </p>
 
-    <h2>RSS/FEED/ATOM(信息聚合订阅)</h2>
-    <p>
-        [电台连接](<a href="https://arkfuture.cn/ARKFUTURE/RES/rss.opml">https://arkfuture.cn/ARKFUTURE/RES/rss.opml</a>)
-    </p>
+        <h2>RSS/FEED/ATOM(信息聚合订阅)</h2>
+        <p>
+            [电台连接](<a
+                href="https://arkfuture.cn/ARKFUTURE/RES/rss.opml">https://arkfuture.cn/ARKFUTURE/RES/rss.opml</a>)
+        </p>
 
-    <h2>!重要说明!</h2>
-    <p>
-        以上服务详细信息及端口请在IRC中的MOTD中获取 
+        <h2>!重要说明!</h2>
+        <p>
+            以上服务详细信息及端口请在IRC中的MOTD中获取
 
-        或联系邮箱[发邮件](<a herf="mailto:pz5ef7gpx@mozmail.com">mailto:pz5ef7gpx@mozmail.com</a>)进行获取 
-    </p>
+            或联系邮箱[发邮件](<a herf="mailto:pz5ef7gpx@mozmail.com">mailto:pz5ef7gpx@mozmail.com</a>)进行获取
+        </p>
 
-    <h2>IRC[主要服务](因特网中继聊天,使用INSPIRCD搭建)</h2>
-    <p>
-        默认端口连接不上请 切换端口连接
-        非加密,端口使用6667-6669;其中,6668,6669端口为备用
-        加密,端口使用6697,6679;其中,6679端口为备用
-        [非加密端口链接](<a href="irc://irc.arkfuture.cn:6667/#arkfuture">irc://irc.arkfuture.cn:6667/#arkfuture</a>)
-    </p>
+        <h2>IRC[主要服务](因特网中继聊天,使用INSPIRCD搭建)</h2>
+        <p>
+            默认端口连接不上请 切换端口连接
+            非加密,端口使用6667-6669;其中,6668,6669端口为备用
+            加密,端口使用6697,6679;其中,6679端口为备用
+            [非加密端口链接](<a href="irc://irc.arkfuture.cn:6667/#arkfuture">irc://irc.arkfuture.cn:6667/#arkfuture</a>)
+        </p>
 
-    <h2>小组件[第三方链接]</h2>
-    <center>
-    <p>
-            <img src="https://www.hamqsl.com/solar101vhfper.php">
-            <img src="https://www.hamqsl.com/solar101vhfpic.php">
-            <img src="https://www.hamqsl.com/solarmuf.php">
-            <img src="https://www.hamqsl.com/solarmap.php">   
-    </p>
-    </center>
+        <h2>小组件[第三方链接]</h2>
+        <center>
+            <p>
+                <img src="https://www.hamqsl.com/solar101vhfper.php">
+                <img src="https://www.hamqsl.com/solar101vhfpic.php">
+                <img src="https://www.hamqsl.com/solarmuf.php">
+                <img src="https://www.hamqsl.com/solarmap.php">
+            </p>
+        </center>
 
-    <h2>游戏战队</h2>
-    <p>
-        我们有一个QQ飞车手游战队-骇客军团
-    </p>
+        <h2>游戏战队</h2>
+        <p>
+            我们有一个QQ飞车手游战队-骇客军团
+        </p>
 
-    <h2>你可以来社交媒体找到我们</h2>
-    <p>
-        搜索 ：ARKFUTURE、ARKFUTURELAB、ARKFUTURESTUDIO、ARKFUTUREGROUP
-        只有特别说明/标注的才是哦,我们是一个非盈利非政府的组织！我们常以ARKFUTURE自称
-        否则为其他公司/企业(就不是我们了)
-    </p>
+        <h2>你可以来社交媒体找到我们</h2>
+        <p>
+            搜索 ：ARKFUTURE、ARKFUTURELAB、ARKFUTURESTUDIO、ARKFUTUREGROUP
+            只有特别说明/标注的才是哦,我们是一个非盈利非政府的组织！我们常以ARKFUTURE自称
+            否则为其他公司/企业(就不是我们了)
+        </p>
 
-</div>
-<br>
-<div class="zww" id="3">
-    <h1>一些链接</h1>
+    </div>
+    <br>
+    <div class="zww" id="3">
+        <h1>一些链接</h1>
 
-    <p>
-        这个条目是展示一些链接
-        这些链接为随时随地使用而准备
-        展示链接不代表我们跟某个团体或公司合作    
-    </p>
+        <p>
+            这个条目是展示一些链接
+            这些链接为随时随地使用而准备
+            展示链接不代表我们跟某个团体或公司合作
+        </p>
 
-    <h2>系统</h2>
-    <p>
-        [ParrotSec](<a href="https://parrotsec.org">https://parrotsec.org</a>)
-        [Kali](<a href="https://www.kali.org">https://www.kali.org</a>)
-        [BlackArch](<a href="https://blackarch.org">https://blackarch.org</a>)
-        [Debian](<a href="https://www.debian.org">https://www.debian.org</a>)
-        [OpenMediaVault](<a href="https://www.openmediavault.org">https://www.openmediavault.org</a>)
-        [UUP dump(Windows下载及更新)](<a href="https://uupdump.net">https://uupdump.net</a>)
-    </p>
+        <h2>系统</h2>
+        <p>
+            [ParrotSec](<a href="https://parrotsec.org">https://parrotsec.org</a>)
+            [Kali](<a href="https://www.kali.org">https://www.kali.org</a>)
+            [BlackArch](<a href="https://blackarch.org">https://blackarch.org</a>)
+            [Debian](<a href="https://www.debian.org">https://www.debian.org</a>)
+            [OpenMediaVault](<a href="https://www.openmediavault.org">https://www.openmediavault.org</a>)
+            [UUP dump(Windows下载及更新)](<a href="https://uupdump.net">https://uupdump.net</a>)
+        </p>
 
-    <h2>NTP 时间同步服务器</h2>
-    <p>
-        [国家授时中心 NTP 服务器](ntp.ntsc.ac.cn)
-        [中国 NTP 快速授时服务](cn.ntp.org.cn)
-        [中国教育网专用](edu.ntp.org.cn)
-    </p>
+        <h2>NTP 时间同步服务器</h2>
+        <p>
+            [国家授时中心 NTP 服务器](ntp.ntsc.ac.cn)
+            [中国 NTP 快速授时服务](cn.ntp.org.cn)
+            [中国教育网专用](edu.ntp.org.cn)
+        </p>
 
-    <h2>Tracker 这个作为bt种子的下载服务器</h2>
-    <p>
-        [OPENTRACKER](<a href="http://opentrackr.org">http://opentrackr.org</a>)
-        [TRACKERSLIST](<a href="https://trackerslist.com">https://trackerslist.com</a>)
-    </p>
+        <h2>Tracker 这个作为bt种子的下载服务器</h2>
+        <p>
+            [OPENTRACKER](<a href="http://opentrackr.org">http://opentrackr.org</a>)
+            [TRACKERSLIST](<a href="https://trackerslist.com">https://trackerslist.com</a>)
+        </p>
 
-    <h2>DNS 选优</h2>
-    <p>
-        国内
-        [阿里](223.5.5.5)
-        [清华](101.6.6.6)
+        <h2>DNS 选优</h2>
+        <p>
+            国内
+            [阿里](223.5.5.5)
+            [清华](101.6.6.6)
 
-        国外
-        [Cloudflare](1.1.1.1)
-        [Google](8.8.8.8)
+            国外
+            [Cloudflare](1.1.1.1)
+            [Google](8.8.8.8)
 
-    <h2>私人DNS</h2>
-    <p>
-        DoH(DNS Over HTTPS)—DoT(DNS over TLS,仅限域名)
-        (在ANDROID上只能填写域名的 私人DNS )( 基于HTTPS的安全DNS )适用;这里以DoT优先展示
-        国内
-        [阿里云 DoT](dns.alidns.com)
-        [腾讯云 DoT](dot.pub)
-        国外
-        [Cloudflare DoT](1dot1dot1dot1.cloudflare-dns.com)
-        [Cloudflare DoH](<a href="https://1.0.0.1/dns-query">https://1.0.0.1/dns-query</a>)
-        [Opendns DoH](<a href="https://doh.opendns.com/dns-query">https://doh.opendns.com/dns-query</a>)
-    </p>
-</div>
-<br>
-<div class="zww" id="4">
-    <h1>License/开源软件证书/知识共享开放许可</h1>
+        <h2>私人DNS</h2>
+        <p>
+            DoH(DNS Over HTTPS)—DoT(DNS over TLS,仅限域名)
+            (在ANDROID上只能填写域名的 私人DNS )( 基于HTTPS的安全DNS )适用;这里以DoT优先展示
+            国内
+            [阿里云 DoT](dns.alidns.com)
+            [腾讯云 DoT](dot.pub)
+            国外
+            [Cloudflare DoT](1dot1dot1dot1.cloudflare-dns.com)
+            [Cloudflare DoH](<a href="https://1.0.0.1/dns-query">https://1.0.0.1/dns-query</a>)
+            [Opendns DoH](<a href="https://doh.opendns.com/dns-query">https://doh.opendns.com/dns-query</a>)
+        </p>
+    </div>
+    <br>
+    <div class="zww" id="4">
+        <h1>License/开源软件证书/知识共享开放许可</h1>
 
-    <h2>资源使用及版权说明</h2>
-    <p>
-        1.邮箱:我们使用arkfuture.cn域名的邮箱
-        2.图片资源:我们所使用的图片部分来自互联网,部分来自工作室管理运营人员自费购买授权使用
-        3.文件资源:文件资源均为成员分享,有互联网作品,成员自己作品等
-        4.版权:互联网的图片和作品我们均为学习使用,24小时内删除,
+        <h2>资源使用及版权说明</h2>
+        <p>
+            1.邮箱:我们使用arkfuture.cn域名的邮箱
+            2.图片资源:我们所使用的图片部分来自互联网,部分来自工作室管理运营人员自费购买授权使用
+            3.文件资源:文件资源均为成员分享,有互联网作品,成员自己作品等
+            4.版权:互联网的图片和作品我们均为学习使用,24小时内删除,
             部分开源作品我们遵循各类开源许可证使用,成员作品若愿意则成为资源资源
-        5.此页面除了 背景 为站外资源,其他均使用站内资源
-    </p>
+            5.此页面除了 背景 为站外资源,其他均使用站内资源
+        </p>
 
-    <h2>开源许可</h2>
-    <p>
-        1.
+        <h2>开源许可</h2>
+        <p>
+            1.
             [GNU开源许可](<a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>)
             [CC4.0知识许可](<a href="https://creativecommons.org/licenses/">https://creativecommons.org/licenses/</a>)
 
-        2.除了以上老牌许可证,其他许可证我们也在使用,因为篇幅,我们不再写其他的了
-    </p>
+            2.除了以上老牌许可证,其他许可证我们也在使用,因为篇幅,我们不再写其他的了
+        </p>
 
 
-    <h2>非政府|非盈利|开放源代码|知识共享</h2>
-    <center>
-    <p>
-        ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP
-        方舟未来|方舟未来实验室|方舟未来工作室|方舟未来集团
-    </p>
-    </center>
-</div>
-<br>
-<div class="zww" id="5">
-    <h1>写在最后</h1>
+        <h2>非政府|非盈利|开放源代码|知识共享</h2>
+        <center>
+            <p>
+                ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP
+                方舟未来|方舟未来实验室|方舟未来工作室|方舟未来集团
+            </p>
+        </center>
+    </div>
+    <br>
+    <div class="zww" id="5">
+        <h1>写在最后</h1>
 
-    <h2>我们崇尚黑客精神</h2>
-    <p>
-        黑客精神Hacker ,这个词是用来形容那些热衷于解决问题、克服限制的人
-            “任何职业都可以成为黑客你可以是一个木匠黑客不一定是高科技只要与技能有关,并且倾心专注于你正在做的事情,你就可能成为黑客”   
-                                                                                                 ——引自《黑客伦理与信息时代精神》 
-    </p>
+        <h2>我们崇尚黑客精神</h2>
+        <p>
+            黑客精神Hacker ,这个词是用来形容那些热衷于解决问题、克服限制的人
+            “任何职业都可以成为黑客你可以是一个木匠黑客不一定是高科技只要与技能有关,并且倾心专注于你正在做的事情,你就可能成为黑客”
+            ——引自《黑客伦理与信息时代精神》
+        </p>
 
-    <h2>我们同时也崇尚开源精神</h2>
-    <p>
-    共享中创新 
-    </p>
+        <h2>我们同时也崇尚开源精神</h2>
+        <p>
+            共享中创新
+        </p>
 
-    <h1>谢谢团队中每个人的陪伴</h1>
-    
+        <h1>谢谢团队中每个人的陪伴</h1>
 
-</div>
+
+    </div>
 
 
 </body>
 
 
 
-<!-------------css-------> 
+<!-------------css------->
 <style>
-body {
-    height: 100%;
-    min-height: 100vh;
-    width: 100%;
-    overflow-x: hidden;
-    justify-content: center;
-    background: var(--main-bg-color, linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240)));
-    /*
+    body {
+        height: 100%;
+        min-height: 100vh;
+        width: 100%;
+        overflow-x: hidden;
+        justify-content: center;
+        background: var(--main-bg-color, linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240)));
+        /*
     background-image: url("");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     */
-}
-.logo {
-    display: flex;
-    width: 20%;
-    height: 20%;
-    border-radius: 5px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.welcome {
-    margin: 30px;
-    font-size: 50px;
-    text-align: center;
-}
-.zww{
-     /* 设置元素在其父容器显示 */
-    margin: 30px;
-    /* 设置元素的边框为1像素宽,实线,颜色为半透明的白色 */
-    border: 2px solid rgba(255, 255, 255, 0.5);
-    /* 设置元素的盒子阴影效果,偏移量为0像素,模糊半径为12像素,颜色为白色 */
-    box-shadow: 0px 0px 12px rgb(248, 239, 255);
-    /* 设置元素的边框圆角 */
-    border-radius: 10px;
-    /* 设置弹性布局中的元素在主轴（默认为水平方向）上居中对齐 */
-    justify-content: center;
-    /* 设置弹性布局中的元素在交叉轴（默认为垂直方向）上居中对齐 */
-    align-items: center;
-    /* 设置元素的所有属性变化时的过渡效果,持续时间为0.5秒 */
-    transition: all 0.5s;
-}
-.zww h1 {
-    text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
-    margin: 30px;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.zww h2 {
-    text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
-    margin: 20px;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-}
-.zww p {
-    text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
-    margin: 20px;
-    white-space: pre;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-}
+    }
 
+    .logo {
+        display: flex;
+        width: 20%;
+        height: 20%;
+        border-radius: 5px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 
+    .welcome {
+        margin: 30px;
+        font-size: 50px;
+        text-align: center;
+    }
 
+    .zww {
+        /* 设置元素在其父容器显示 */
+        margin: 30px;
+        /* 设置元素的边框为1像素宽,实线,颜色为半透明的白色 */
+        border: 2px solid rgba(255, 255, 255, 0.5);
+        /* 设置元素的盒子阴影效果,偏移量为0像素,模糊半径为12像素,颜色为白色 */
+        box-shadow: 0px 0px 12px rgb(248, 239, 255);
+        /* 设置元素的边框圆角 */
+        border-radius: 10px;
+        /* 设置弹性布局中的元素在主轴（默认为水平方向）上居中对齐 */
+        justify-content: center;
+        /* 设置弹性布局中的元素在交叉轴（默认为垂直方向）上居中对齐 */
+        align-items: center;
+        /* 设置元素的所有属性变化时的过渡效果,持续时间为0.5秒 */
+        transition: all 0.5s;
+    }
+
+    .zww h1 {
+        text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+        margin: 30px;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .zww h2 {
+        text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+        margin: 20px;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+    }
+
+    .zww p {
+        text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+        margin: 20px;
+        white-space: pre;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+    }
 </style>
-<!-------------JS-------> 
+<!-------------JS------->
 <script>
     var OriginTitile = document.title;
     var titleTime;
-    document.addEventListener('visibilitychange', function() {
+    document.addEventListener('visibilitychange', function () {
         if (document.hidden) {
             document.title = '(つェ⊂)我藏好了哦~' + OriginTitile;
             clearTimeout(titleTime);
         } else {
             document.title = '(*´∇｀*) 被你发现啦~' + OriginTitile;
-            titleTime = setTimeout(function() {
-              document.title = OriginTitile;
+            titleTime = setTimeout(function () {
+                document.title = OriginTitile;
             }, 2000);
         }
     });
 </script>
 
-<!-------------FOOTER-------> 
+<!-------------FOOTER------->
 <footer>
     <p style="text-align: center;font-size: 1vw;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
     <p style="text-align: center;font-size: 1vw;">方舟未来|实验室|工作室|团队/集团</p>
 </footer>
+
 </html>
